test/files/neg/import-syntax.check
import-syntax.scala:13: error: not found: value should fail
  `should fail`()
  ^
one error found
